Fix URLRequestQuicPerfTest to actually trigger memory dump

The test was broken because enabling tracing no longer enables
MemoryDumpManager. Directly use memory tracing api for checking the dump
values instead of trace file analyzer.

BUG=746124

Change-Id: I950a1e43a63b6424afd67f0c6d30e0c50722fe24